; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_nvenc_common.c_hb_check_nvenc_available.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_nvenc_common.c_hb_check_nvenc_available.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@isAvailable = common dso_local global i32 0, align 4
@NVENCAPI_MAJOR_VERSION = common dso_local global i32 0, align 4
@NVENCAPI_MINOR_VERSION = common dso_local global i32 0, align 4
@NV_ENC_SUCCESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hb_check_nvenc_available() #0 {
  %1 = alloca i32, align 4
  %2 = call i64 (...) @is_hardware_disabled()
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %11

5:                                                ; preds = %0
  %6 = load i32, i32* @isAvailable, align 4
  %7 = icmp ne i32 %6, -1
  br i1 %7, label %8, label %10

8:                                                ; preds = %5
  %9 = load i32, i32* @isAvailable, align 4
  store i32 %9, i32* %1, align 4
  br label %11

10:                                               ; preds = %5
  store i32 0, i32* %1, align 4
  br label %11

11:                                               ; preds = %10, %8, %4
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i64 @is_hardware_disabled(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
